--- a/Migration/Eisk.Web.Tests/packages.config
+++ b/Migration/Eisk.Web.Tests/packages.config
@@ -10,4 +10,10 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Moq" version="4.1.1309.1617" targetFramework="net451" />
   <package id="Unity" version="3.0.1304.1" targetFramework="net451" />
+  <package id="xunit" version="2.0.0" targetFramework="net46" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
+  <package id="xunit.assert" version="2.0.0" targetFramework="net46" />
+  <package id="xunit.core" version="2.0.0" targetFramework="net46" />
+  <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net46" />
+  <package id="xunit.runner.visualstudio" version="2.0.1" targetFramework="net46" />
 </packages>
