--- a/Migration/Eisk.Web.Tests/Eisk.Web.Tests.csproj
+++ b/Migration/Eisk.Web.Tests/Eisk.Web.Tests.csproj
@@ -166,7 +166,7 @@
     <Compile Include="Helpers\FakeEmployeeDbSet.cs" />
     <Compile Include="Helpers\TestBase.cs" />
     <Compile Include="Helpers\FakeDbSet.cs" />
-    <Compile Include="Controllers\ValidationTests.cs" />
+    <Compile Include="Models\ValidationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
