--- a/Migration/Eisk.Web/Eisk.Web.csproj
+++ b/Migration/Eisk.Web/Eisk.Web.csproj
@@ -199,8 +199,24 @@
   <ItemGroup>
     <Content Include="App_Data\Notes.txt" />
     <Content Include="App_Data\TestData.xml" />
+    <Content Include="Content\themes\default\css\bootstrap-theme.3.3.4.min.css" />
     <Content Include="Content\themes\default\css\bootstrap.css" />
     <Content Include="Content\themes\default\css\eisk.css" />
+    <Content Include="Content\themes\default\css\overcast\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Content\themes\default\css\overcast\images\ui-bg_flat_0_eeeeee_40x100.png" />
+    <Content Include="Content\themes\default\css\overcast\images\ui-bg_flat_55_c0402a_40x100.png" />
+    <Content Include="Content\themes\default\css\overcast\images\ui-bg_flat_55_eeeeee_40x100.png" />
+    <Content Include="Content\themes\default\css\overcast\images\ui-bg_glass_100_f8f8f8_1x400.png" />
+    <Content Include="Content\themes\default\css\overcast\images\ui-bg_glass_35_dddddd_1x400.png" />
+    <Content Include="Content\themes\default\css\overcast\images\ui-bg_glass_60_eeeeee_1x400.png" />
+    <Content Include="Content\themes\default\css\overcast\images\ui-bg_inset-hard_75_999999_1x100.png" />
+    <Content Include="Content\themes\default\css\overcast\images\ui-bg_inset-soft_50_c9c9c9_1x100.png" />
+    <Content Include="Content\themes\default\css\overcast\images\ui-icons_3383bb_256x240.png" />
+    <Content Include="Content\themes\default\css\overcast\images\ui-icons_454545_256x240.png" />
+    <Content Include="Content\themes\default\css\overcast\images\ui-icons_70b2e1_256x240.png" />
+    <Content Include="Content\themes\default\css\overcast\images\ui-icons_999999_256x240.png" />
+    <Content Include="Content\themes\default\css\overcast\images\ui-icons_fbc856_256x240.png" />
+    <Content Include="Content\themes\default\css\overcast\jquery-ui-1.8.18.custom.css" />
     <Content Include="Content\themes\default\css\Site.css" />
     <Content Include="Content\themes\default\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Images\ico-refresh.png" />
@@ -217,15 +233,14 @@
     <Content Include="Images\iso-resultset-first.png" />
     <Content Include="Images\loader-life.gif" />
     <Content Include="Images\noimage.gif" />
-    <Content Include="Content\themes\default\css\bootstrap-theme-3.3.4.min.css" />
     <Content Include="Scripts\bootstrap.js" />
-    <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\eisk-ajax-loader.js" />
     <Content Include="Scripts\eisk.js" />
     <Content Include="Scripts\eisk-menu.js" />
     <Content Include="Scripts\eisk-required-if-validation.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
-    <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery-ui-1.8.18.custom.min.js" />
+    <Content Include="Scripts\jquery.mobile-1.0.1.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\respond.js" />
@@ -284,6 +299,8 @@
     <Content Include="Content\themes\default\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\themes\default\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="Content\themes\default\fonts\glyphicons-halflings-regular.woff" />
+    <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <None Include="Scripts\jquery.validate-vsdoc.js" />
     <None Include="Views\Home\Index.iPhone.cshtml" />
     <Content Include="Views\Shared\_EditorImagePanel.cshtml" />
     <Content Include="Views\Shared\_Layout.Mobile.cshtml" />
