--- a/Migration/Eisk.Web/Web.config
+++ b/Migration/Eisk.Web/Web.config
@@ -41,6 +41,7 @@
       <assemblies>
         <add assembly="System.Web.Mvc, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
         <add assembly="System.Web.WebPages, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
       </assemblies>
     </compilation>
     <pages controlRenderingCompatibilityVersion="4.0">
