--- a/Migration/Eisk.Web/packages.config
+++ b/Migration/Eisk.Web/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net46" />
+  <package id="AutoMapper" version="4.0.4" targetFramework="net46" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="EntityFramework.SqlServerCompact" version="6.0.1" targetFramework="net46" />
