--- a/Migration/Eisk.Web/Web.config
+++ b/Migration/Eisk.Web/Web.config
@@ -36,7 +36,7 @@
   <system.web>
     <trace enabled="true" requestLimit="100" localOnly="true" />
     <!-- Error page is not required to set, instead Shared\Error.cshtml will be shown. -->
-    <customErrors mode="Off" />
+    <customErrors mode="Off" defaultRedirect="~/Views/Shared/Error.cshtml"/>
     <httpRuntime maxRequestLength="1000000" />
     <compilation debug="true" targetFramework="4.6">
       <assemblies>
