--- a/Migration/Eisk.Web.Tests/Eisk.Web.Tests.csproj
+++ b/Migration/Eisk.Web.Tests/Eisk.Web.Tests.csproj
@@ -173,7 +173,7 @@
     <Compile Include="Helpers\FakeEmployeeDbSet.cs" />
     <Compile Include="Helpers\TestBase.cs" />
     <Compile Include="Helpers\FakeDbSet.cs" />
-    <Compile Include="Models\ValidationTests.cs" />
+    <Compile Include="Models\EmployeeClassValidationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
