image upload updated.

--- a/Migration/Eisk.Web/Eisk.Web.csproj
+++ b/Migration/Eisk.Web/Eisk.Web.csproj
@@ -256,10 +256,12 @@
     <Content Include="Images\noimage.gif" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\eisk-ajax-loader.js" />
+    <Content Include="Scripts\eisk-image-uploader.js" />
     <Content Include="Scripts\eisk.js" />
     <Content Include="Scripts\eisk-menu.js" />
     <Content Include="Scripts\eisk-required-if-validation.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
+    <Content Include="Scripts\eisk-calender.js" />
     <Content Include="Scripts\jquery-ui.js" />
     <Content Include="Scripts\jquery.mobile-1.0.1.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
