--- a/Migration/Eisk.Web/Eisk.Web.csproj
+++ b/Migration/Eisk.Web/Eisk.Web.csproj
@@ -240,6 +240,7 @@
     <Content Include="Content\themes\default\jquery-ui\jquery-ui.css" />
     <Content Include="Content\themes\default\jquery-ui\jquery.ui.theme.css" />
     <Content Include="Content\themes\default\mvc-default.css" />
+    <Content Include="favicon.ico" />
     <Content Include="Images\ico-refresh.png" />
     <Content Include="Images\ico-arrow-back.png" />
     <Content Include="Global.asax" />
@@ -252,8 +253,8 @@
     <Content Include="Images\ico-resultset-next.png" />
     <Content Include="Images\ico-resultset-previous.png" />
     <Content Include="Images\iso-resultset-first.png" />
+    <Content Include="Images\noimage.png" />
     <Content Include="Images\loader-life.gif" />
-    <Content Include="Images\noimage.gif" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\eisk-ajax-loader.js" />
     <Content Include="Scripts\eisk-image-uploader.js" />
